--- a/src/scss/_resets.scss
+++ b/src/scss/_resets.scss
@@ -7,10 +7,10 @@
 }
 html {
     font-size: 62.5%;
-    font-family: $textFont;
 }
 body { 
     font-size: 16px;
+    font-family: $textFont;
 }
 h1, h2, h3 {
     font-weight: bold;
@@ -23,4 +23,7 @@ a {
 }
 li {
     list-style: none;
+}
+button {
+    font-family: $textFont;
 }
