connection with firebase and login functionality

--- a/src/components/Login/Login.scss
+++ b/src/components/Login/Login.scss
@@ -99,6 +99,14 @@
         justify-content: center;
         gap: 2rem;
       }
+
+      .error-message {
+        color: #f01010;
+        padding: 1rem 0;
+        text-align: center;
+        font-weight: bold;
+        font-size: 1.7rem;
+      }
     }
   }
   
