--- a/src/components/ModalMobile/ModalMobile.scss
+++ b/src/components/ModalMobile/ModalMobile.scss
@@ -39,6 +39,7 @@
             border: none;
             cursor: pointer;
             width: 80%;
+            font-weight: bold;
         
             &:hover {
                 background-color: #198a2e;
