--- a/src/components/MainLayout/MainLayout.scss
+++ b/src/components/MainLayout/MainLayout.scss
@@ -1,18 +1,30 @@
+@import '../../scss/variables';
+
 main {
 
     .results {
 
-        .results-buttons {
+        .filter-buttons {
             text-align: center;
             color: #000000;
             margin: 5rem;
 
-            a {
+            @include responsive(768) {
+                margin: 5rem 1rem;
+            }
+
+            button {
                 font-size: 2.5rem;
                 cursor: pointer;
-                margin: 2rem;
+                margin: 0 2rem;
                 color: #000000;
                 font-weight: bold;
+                background-color: transparent;
+                border: none;
+            }
+
+            .active {
+                color: $mainColor;
             }
         }
     }
