--- a/src/components/TrendingList/TrendingList.scss
+++ b/src/components/TrendingList/TrendingList.scss
@@ -1,23 +1,79 @@
-.trending-list {
-    margin: 5rem 0;
+@import '../../scss/variables';
+
+.results-list {
     padding: 2rem;
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    place-items: center;
-    align-items: start;
-    row-gap: 3rem;
 
-    .trending {
-        font-family: Arial, Helvetica, sans-serif;
+    h2 {
+        font-size: 4rem;
+        text-align: center;
+        margin: 5rem 0;
+    }
 
-        img {
-            object-fit: cover;
-            height: 100%;
+    .map {
+        display: grid;
+        grid-template-columns: repeat(5, 1fr);
+        place-items: center;
+        align-items: start;
+        row-gap: 3rem;
+
+        @media (max-width: 1100px) {
+            grid-template-columns: repeat(4, 1fr);
         }
 
-        h3, p {
-            font-size: 1.5rem;
-            max-width: 20rem;
+        @media (max-width: 900px) {
+            grid-template-columns: repeat(3, 1fr);
         }
+
+        @media (max-width: 600px) {
+            grid-template-columns: repeat(2, 1fr);
+        }
+
+        .result {
+            font-family: Arial, Helvetica, sans-serif;
+    
+            img {
+                object-fit: cover;
+                height: 100%;
+                cursor: pointer;
+
+                @include responsive(768) {
+                    width: 15rem;
+                }
+            }
+    
+            h3, p {
+                font-size: 1.5rem;
+                max-width: 20rem;
+
+                @include responsive(768) {
+                    max-width: 15rem;
+                }
+            }
+
+            .bottom {
+                display: flex;
+                align-items: center;
+                justify-content: flex-start;
+                
+                span {
+                    padding: 0 1rem;
+                    font-weight: bold;
+                }
+            }
+        }
+    }
+
+    .load-more {
+        display: block;
+        margin: 2rem auto;
+        background-color: $black;
+        color: $mainColor;
+        border: 2px solid $mainColor;
+        padding: 1rem 2rem;
+        font-size: 1.7rem;
+        font-weight: bold;
+        font-family: $titleFont;
+        border-radius: 1rem;
+        cursor: pointer;
     }
 }
