--- a/src/components/ModalMobile/ModalMobile.scss
+++ b/src/components/ModalMobile/ModalMobile.scss
@@ -12,7 +12,7 @@
     justify-content: center;
     align-items: center;
 
-    .modal {
+    .modal-not-logged {
         z-index: 1000;
         width: 100%;
         height: 100%;
@@ -45,5 +45,29 @@
                 background-color: #198a2e;
             }
         }
+    }
+
+    .modal-logged {
+        z-index: 1000;
+        display: flex;
+        align-items: center;
+        gap: 2rem;
+        
+        p {
+            font-size: 2rem;
+            font-weight: bold;
+            cursor: pointer;
+        }
+
+        button {
+            background-color: transparent;
+            border: none;
+            cursor: pointer;
+    
+            svg {
+                color: $white;
+                font-size: 3rem;
+            }
+        }  
     }
 }
