detail of each movie and tv serie and new components

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -2,9 +2,9 @@
 
 footer {
     color: #000000;
-    padding: 1rem;
+    padding: 1rem 7rem;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     border-top: 2px solid $mainColor;
 
