--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -20,6 +20,10 @@
             li {
                 font-size: 2.2rem;
                 font-weight: bold;
+                display: flex;
+                gap: 1rem;
+                justify-content: center;
+                align-items: center;
 
                 @include responsive(992) {
                     font-size: 1.8rem;
