--- a/src/components/ModalMobile/ModalMobile.scss
+++ b/src/components/ModalMobile/ModalMobile.scss
@@ -57,6 +57,7 @@
             font-size: 2rem;
             font-weight: bold;
             cursor: pointer;
+            color: #ffffff;
         }
 
         button {
