--- a/src/components/ResultsList/ResultsList.scss
+++ b/src/components/ResultsList/ResultsList.scss
@@ -30,14 +30,18 @@
 
         .result {
             font-family: Arial, Helvetica, sans-serif;
-    
-            img {
-                object-fit: cover;
-                height: 100%;
-                cursor: pointer;
 
-                @include responsive(768) {
-                    width: 15rem;
+            a {
+                
+                img {
+                    object-fit: cover;
+                    height: 30rem;
+                    cursor: pointer;
+    
+                    @include responsive(768) {
+                        width: 15rem;
+                        height: 22rem;
+                    }
                 }
             }
     
@@ -47,6 +51,7 @@
 
                 @include responsive(768) {
                     max-width: 15rem;
+                    font-size: 1.3rem;
                 }
             }
 
