--- a/src/components/ModalMobile/ModalMobile.scss
+++ b/src/components/ModalMobile/ModalMobile.scss
@@ -12,7 +12,24 @@
     justify-content: center;
     align-items: center;
 
-    .modal-not-logged {
+    button, a {
+        padding: 1rem 0;
+        border-radius: .5rem;
+        background-color: $mainColor;
+        color: white;
+        border: none;
+        cursor: pointer;
+        width: 80%;
+        font-weight: bold;
+        text-align: center;
+        font-family: $textFont;
+    
+        &:hover {
+            background-color: #198a2e;
+        }
+    }
+
+    .modal-not-logged, .modal-logged {
         z-index: 1000;
         width: 100%;
         height: 100%;
@@ -22,53 +39,18 @@
         justify-content: center;
         gap: 4rem;
 
-        .search-mobile-bar {
-            margin-top: 2rem;
-            border-radius: .5rem;
-            padding: 1.2rem .5rem;
-            border: none;
-            width: 80%;
-        }
-        
-        button {
-            margin-top: 2rem;
-            padding: 1rem 0;
-            border-radius: .5rem;
-            background-color: $mainColor;
-            color: white;
-            border: none;
-            cursor: pointer;
-            width: 80%;
-            font-weight: bold;
-        
-            &:hover {
-                background-color: #198a2e;
-            }
-        }
-    }
-
-    .modal-logged {
-        z-index: 1000;
-        display: flex;
-        align-items: center;
-        gap: 2rem;
-        
-        p {
-            font-size: 2rem;
+        h3 {
+            font-size: 3rem;
             font-weight: bold;
             cursor: pointer;
             color: #ffffff;
+            position: absolute;
+            left: 1rem;
+            top: 2rem;
         }
+    }
 
-        button {
-            background-color: transparent;
-            border: none;
-            cursor: pointer;
-    
-            svg {
-                color: $white;
-                font-size: 3rem;
-            }
-        }  
+    .search {
+        display: block;
     }
 }
