--- a/src/components/MovieDetail/MovieDetail.scss
+++ b/src/components/MovieDetail/MovieDetail.scss
@@ -16,6 +16,7 @@
             padding: 7rem 2rem;
             flex-direction: column;
             align-items: center;
+            background-position: center;
         }
 
         h2, h3 {
@@ -32,7 +33,7 @@
         }
 
         .texts {
-            max-width: 70vw;
+            max-width: 65vw;
             display: flex;
             flex-direction: column;
             gap: 1.5rem;
