--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -12,6 +12,7 @@ footer {
         flex-direction: column;
         justify-content: center;
         gap: 1rem;
+        padding: 1rem;
     }
 
     a {
