--- a/src/components/MovieDetail/MovieDetail.scss
+++ b/src/components/MovieDetail/MovieDetail.scss
@@ -96,21 +96,30 @@
             }
 
             .add-buttons {
-                display: flex;
-                align-items: center;
-                gap: 2rem;
 
-                button {
-                    background-color: $mainColor;
-                    padding: 1rem;
-                    border: none;
-                    border-radius: 50%;
-                    
-                    svg {
-                        color: $black;
-                        width: 2.5rem;
-                        height: 2.5rem;
+                .logged-buttons {
+                    display: flex;
+                    align-items: center;
+                    gap: 2rem;    
+
+                    button {
+                        background-color: $mainColor;
+                        padding: 1rem;
+                        border: none;
+                        border-radius: 50%;
+                        
+                        svg {
+                            color: $black;
+                            width: 2.5rem;
+                            height: 2.5rem;
+                        }
                     }
+                }
+
+                p {
+                    font-size: 1.4rem;
+                    font-weight: bold;
+                    color: red;
                 }
             }
 
@@ -127,4 +136,8 @@
             }
         }
     }
+}
+
+.chakra-toast {
+    margin-top: 2rem;
 }
