--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -111,3 +111,25 @@ header {
 .modal-opened {
     overflow: hidden;
 }
+
+.logout-button {
+    height: auto !important;
+
+    @include responsive(768) {
+        display: flex;
+        align-items: center;
+        gap: 2rem;
+
+        svg {
+            font-size: 2rem;
+        }
+    }
+}
+
+.logout-text {
+    font-size: 1.6rem;
+
+    @media (min-width: 769px) {
+        display: none;
+    }
+}
