--- a/src/components/FilterButtons/FilterButtons.scss
+++ b/src/components/FilterButtons/FilterButtons.scss
@@ -13,7 +13,7 @@
         font-size: 2.5rem;
         cursor: pointer;
         margin: 0 2rem;
-        color: #000000;
+        color: #ffffff;
         font-weight: bold;
         background-color: transparent;
         border: none;
