--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -47,7 +47,7 @@ header {
                 gap: .5rem;
 
                 svg {
-                    border: 1px solid #ffffff;
+                    border: 1px solid $mainColor;
                     padding: .5rem;
                     font-size: 3rem;
                     border-radius: 50%;
