--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,7 +1,7 @@
 @import '../../scss/variables';
 
 footer {
-    color: #000000;
+    color: #ffffff;
     padding: 1rem 7rem;
     display: flex;
     justify-content: space-between;
