--- a/src/scss/_resets.scss
+++ b/src/scss/_resets.scss
@@ -7,10 +7,12 @@
 }
 html {
     font-size: 62.5%;
+    scroll-behavior: smooth;
 }
 body { 
     font-size: 16px;
     font-family: $textFont;
+    background-color: #000000 !important;
 }
 h1, h2, h3 {
     font-weight: bold;
