--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -2,7 +2,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Laila:wght@300;400;500;600;700&display=swap');
 
 // Colors
-$mainColor: #7FB335;
+/* $mainColor: #7FB335; */
+$mainColor: #a40990;
 $black: #000000;
 $white: #ffffff;
 
