--- a/src/components/ResultsList/ResultsList.scss
+++ b/src/components/ResultsList/ResultsList.scss
@@ -12,10 +12,14 @@
 
     .map {
         display: grid;
-        grid-template-columns: repeat(5, 1fr);
+        grid-template-columns: repeat(6, 1fr);
         place-items: center;
         align-items: start;
         row-gap: 3rem;
+
+        @media (max-width: 1400px) {
+            grid-template-columns: repeat(5, 1fr);
+        }
 
         @media (max-width: 1100px) {
             grid-template-columns: repeat(4, 1fr);
