--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Lalezar&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Laila:wght@300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap');
 
 // Colors
 /* $mainColor: #7FB335; */
@@ -8,8 +7,8 @@ $black: #000000;
 $white: #ffffff;
 
 // Fonts
-$titleFont: "Lalezar", system-ui;
-$textFont: "Laila", serif;
+$titleFont: "Inter", system-ui, sans-serif;
+$textFont: "Inter", system-ui, sans-serif;
 
 
 // Media queries
